# clip-latent

./: README.md  main.py  pyproject.toml
src/clip_latent/: data.py
