[tool.poetry]
name = "intern-clip-latent"
version = "0.1.0"
description = ""
authors = ["fabianmax <fabian.mueller@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
